unpackaged/objects/Campaign.object
<CustomObject>
  <fields>
    <fullName>Credits_provided_by__c</fullName>
    <description>Defines if the credits for the course is provided by Dentsply Sirona or a 3rd party partner. Used for reporting.</description>
    <inlineHelpText>Defines if the credits for the course is provided by Dentsply Sirona or a 3rd party partner.</inlineHelpText>
    <label>Credits provided by?</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Dentsply Sirona</fullName>
          <label>Dentsply Sirona - Other</label>
        </value>
        <value>
          <fullName>3rd party</fullName>
        </value>
        <value>
          <fullName>Dentsply Sirona - ADA CERP</fullName>
        </value>
        <value>
          <fullName>Dentsply Sirona - AGD PACE</fullName>
        </value>
        <value>
          <fullName>No credits provided</fullName>
          <default>true</default>
          <label>No credits provided</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Currency__c</fullName>
    <description>Used in WF Criteria. Can also be used in Page Lyouts if needed</description>
    <formula>TEXT(CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Currency of the Campaign</inlineHelpText>
    <label>Currency</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>DB_Campaign_Tactic__c</fullName>
    <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
    <label>DB Campaign Tactic</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Type</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>Print Advertisement</fullName>
        </value>
        <value>
          <fullName>Email</fullName>
        </value>
        <value>
          <fullName>Employment Seminars</fullName>
        </value>
        <value>
          <fullName>Webinars</fullName>
        </value>
        <value>
          <fullName>Public Relations</fullName>
        </value>
        <value>
          <fullName>Partners</fullName>
        </value>
        <value>
          <fullName>Referral Program</fullName>
        </value>
        <value>
          <fullName>Other</fullName>
        </value>
        <value>
          <fullName>Lunches</fullName>
        </value>
        <value>
          <fullName>Direct Mail</fullName>
        </value>
        <value>
          <fullName>Sales Call Down</fullName>
        </value>
        <value>
          <fullName>Online Banners/Ads</fullName>
        </value>
        <value>
          <fullName>Internal Website</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Declaration_approved_by_HQ_FR__c</fullName>
    <description>Follow-up is demanding, on the request of the order Council- FOR FRANCE</description>
    <inlineHelpText>follow-up is demanding, on the request of the order Council</inlineHelpText>
    <label>Declaration approved by HQ (FR)</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Yes</fullName>
          <default>true</default>
          <label>Yes</label>
        </value>
        <value>
          <fullName>No</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Declaration_to_order_council_email__c</fullName>
    <description>This field is used for sending out an automatic email alert when the field Declaration to order council = Yes.
The filed is populated only if this is true. The field is hidden from page layouts.</description>
    <label>Declaration to order council email</label>
    <type>Email</type>
  </fields>
  <fields>
    <fullName>Declaration_to_the_order_Council_FR__c</fullName>
    <description>Follow-up is demanding, on the request of the order Council - FOR FRANCE</description>
    <inlineHelpText>Follow-up is demanding, on the request of the order Council</inlineHelpText>
    <label>Declaration  to the order Council (FR)</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Yes</fullName>
        </value>
        <value>
          <fullName>No</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Describe_the_business_needs_goals__c</fullName>
    <label>Describe the business needs, goals</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Clinical Training (CE)</fullName>
        </value>
        <value>
          <fullName>Product or Technical Training</fullName>
        </value>
        <value>
          <fullName>Train the Trainer</fullName>
        </value>
        <value>
          <fullName>Practice Management</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Double_Room_Rate_Per_Night__c</fullName>
    <label>Double Room Rate Per Night</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>ENGINES_of_NSK__c</fullName>
    <label>ENGINES # of NSK (FR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>ENGINES_of_X_SMART_WO__c</fullName>
    <label>ENGINES # of X SMART +/WO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>ENGINES_of_X_SMART__c</fullName>
    <label>ENGINES # of X SMART</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Email_Template__c</fullName>
    <label>Email Template</label>
    <type>Url</type>
  </fields>
  <fields>
    <fullName>Emergency_Contact_and_Contact_Details__c</fullName>
    <inlineHelpText>Enter name of Emergency Contact and how to make contact.</inlineHelpText>
    <label>Emergency Contact and Contact Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>End_Date_of_Event__c</fullName>
    <description>Copy of End Date to be used on Email Templates</description>
    <formula>Parent_Event__r.EndDate</formula>
    <label>End Date of Event</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Entertainment_Actual__c</fullName>
    <label>Entertainment (Actual)</label>
    <summarizedField>Cost_Revenue_Transaction__c.Amount__c</summarizedField>
    <summaryFilterItems>
      <field>Cost_Revenue_Transaction__c.Type__c</field>
      <operation>equals</operation>
      <value>Entertainment</value>
    </summaryFilterItems>
    <summaryForeignKey>Cost_Revenue_Transaction__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Entertainment_Budget__c</fullName>
    <label>Entertainment (Budget)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Equipment_AU__c</fullName>
    <description>To fill in equipment to bring to the Event</description>
    <label>Equipment (AU)</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Equipment_Actual__c</fullName>
    <label>Equipment (Actual)</label>
    <summarizedField>Cost_Revenue_Transaction__c.Amount__c</summarizedField>
    <summaryFilterItems>
      <field>Cost_Revenue_Transaction__c.Type__c</field>
      <operation>equals</operation>
      <value>Equipment</value>
    </summaryFilterItems>
    <summaryForeignKey>Cost_Revenue_Transaction__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Equipment_Budget__c</fullName>
    <label>Equipment (Budget)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Equipment_Contact_person_and_phone__c</fullName>
    <description>To be used for equipment booking</description>
    <inlineHelpText>To be used for equipment booking</inlineHelpText>
    <label>Equipment Contact person and phone (FR)</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Equipment__c</fullName>
    <description>Add information about specific Equipment needed during the Session</description>
    <inlineHelpText>Add information about specific Equipment needed during the Session</inlineHelpText>
    <label>Equipment</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Equipment_delivery_address_FR__c</fullName>
    <description>To be used for equipment booking</description>
    <inlineHelpText>To be used for equipment booking</inlineHelpText>
    <label>Equipment delivery address (FR)</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Equipment_delivery_date_and_time__c</fullName>
    <description>To be used for equipment booking</description>
    <inlineHelpText>To be used for equipment booking</inlineHelpText>
    <label>Equipment delivery date and time (FR)</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Equipment_needed_FR__c</fullName>
    <description>Equipment needed for Fance</description>
    <inlineHelpText>Equipment needed</inlineHelpText>
    <label>Equipment needed (FR)</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Yes</fullName>
        </value>
        <value>
          <fullName>No</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Equipment_of_Implant_units_FR__c</fullName>
    <description>Used in France to bring equipment to Campaigns</description>
    <inlineHelpText>Used in France to bring equipment to Campaigns</inlineHelpText>
    <label>Equipment # of Implant units (FR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Equipment_of_dummy_implants_FR__c</fullName>
    <description>Used in France to bring equipment to Campaigns</description>
    <inlineHelpText>Used in France to bring equipment to Campaigns</inlineHelpText>
    <label>Equipment # of dummy implants (FR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Equipment_of_mandibles_FR__c</fullName>
    <description>Used in France to bring equipment to Campaigns</description>
    <inlineHelpText>Used in France to bring equipment to Campaigns</inlineHelpText>
    <label>Equipment # of mandibles (FR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Equipment_of_work_station_FR__c</fullName>
    <description>Used in France to bring equipment to Campaigns</description>
    <inlineHelpText>Used in France to bring equipment to Campaigns</inlineHelpText>
    <label>Equipment # of work station (FR)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Equipment_take_back_date__c</fullName>
    <description>To be used for equipment booking</description>
    <inlineHelpText>To be used for equipment booking</inlineHelpText>
    <label>Equipment take back date (FR)</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Est_Cost_per_Participant__c</fullName>
    <description>The Estimated Cost is the budgeted cost on the Campaign divided by the Estimated number of participants. This figure differs from Budgeted cost/participant since the latter field calculates based on actual confirmed participants</description>
    <formula>Total_Cost_Budget__c  / Est_of_participants__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The Estimated Cost is the budgeted cost on the Campaign divided by the Estimated number of participants. This figure differs from Budgeted cost/participant since the latter field calculates based on actual confirmed participants</inlineHelpText>
    <label>Est Cost per Participant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Est_of_participants__c</fullName>
    <label>Est # of participants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Expertease_guided_surgery_hands_on_FR__c</fullName>
    <description>Used in France to bring equipment to Campaigns</description>
    <label>Expertease guided-surgery hands-on (FR)</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>ATIS</fullName>
        </value>
        <value>
          <fullName>Ankylos</fullName>
        </value>
        <value>
          <fullName>XiVE</fullName>
        </value>
        <value>
          <fullName>AVANCEE</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>External_Organizer_City__c</fullName>
    <description>Visiting City as entered on the Partner Account.</description>
    <formula>External_Organizer__r.BillingCity</formula>
    <inlineHelpText>Visiting City as entered on the Partner Account.</inlineHelpText>
    <label>External Organizer City</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>External_Organizer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Organizer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Campaigns (External Organizer)</relationshipLabel>
    <relationshipName>Campaigns2</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>External_Project_ID__c</fullName>
    <description>The Project ID based from an external system. Note that this does NOT mean that any transactions based on this Project ID will be automatically integrated</description>
    <externalId>true</externalId>
    <inlineHelpText>The Project ID based from an external system. Note that this does NOT mean that any transactions based on this Project ID will be automatically integrated</inlineHelpText>
    <label>External Project ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>Fibre_Lasers_FR__c</fullName>
    <label>Fibre Lasers (FR)</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Food_Beverage_Actual__c</fullName>
    <label>Food &amp; Beverage (Actual)</label>
    <summarizedField>Cost_Revenue_Transaction__c.Amount__c</summarizedField>
    <summaryFilterItems>
      <field>Cost_Revenue_Transaction__c.Type__c</field>
      <operation>equals</operation>
      <value>Food &amp; Beverage</value>
    </summaryFilterItems>
    <summaryForeignKey>Cost_Revenue_Transaction__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Food_Beverage_Budget__c</fullName>
    <label>Food &amp; Beverage (Budget)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Frialit__c</fullName>
    <formula>IF(INCLUDES( Brand__c , "Frialit"),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frialit</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Frios__c</fullName>
    <formula>IF(INCLUDES( Brand__c , "Frios"),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Frios</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>GDWUniqueKey__c</fullName>
    <externalId>true</externalId>
    <label>GDW Unique Key</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Geographical_Target__c</fullName>
    <label>Geographical Target</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Local</fullName>
        </value>
        <value>
          <fullName>National</fullName>
        </value>
        <value>
          <fullName>International</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Gifts_Actual__c</fullName>
    <label>Gifts (Actual)</label>
    <summarizedField>Cost_Revenue_Transaction__c.Amount__c</summarizedField>
    <summaryFilterItems>
      <field>Cost_Revenue_Transaction__c.Type__c</field>
      <operation>equals</operation>
      <value>Gifts</value>
    </summaryFilterItems>
    <summaryForeignKey>Cost_Revenue_Transaction__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Gifts_Budget__c</fullName>
    <label>Gifts (Budget)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Goggles_FR__c</fullName>
    <label>Goggles (FR)</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>HQ_Campaign_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HQ Campaign Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns2</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>HQ_Coordinator_Country__c</fullName>
    <description>Displays the User Country of the HQ Campaign Coordinator. Used in reports and dashboards</description>
    <formula>TEXT( HQ_Campaign_Coordinator__r.User_Country__c )</formula>
    <inlineHelpText>Displays the User Country of the HQ Campaign Coordinator</inlineHelpText>
    <label>HQ Coordinator Country</label>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>HQ_M_lndal_Coordinators_involved__c</fullName>
    <description>Shows the number of users from the HQ office at Mölndal involved as either Campaign Coordinator, HQ Campaign Coordinator or HQ (second) Campaign Coordinator</description>
    <formula>CASE(Campaign_Coordinator__c , 
"005200000025lDq",1, 
"00520000001C8Sn",1, 
"005200000025lEo",1,  
0) 
+ 
IF(HQ_Campaign_Coordinator__c=Campaign_Coordinator__c,0, 
CASE(HQ_Campaign_Coordinator__c, 
"005200000025lDq",1, 
"00520000001C8Sn",1, 
"005200000025lEo",1, 
0)) 
+ 
IF(OR(HQ_second_Campaign_Coordinator__c=HQ_Campaign_Coordinator__c,HQ_second_Campaign_Coordinator__c=Campaign_Coordinator__c),0, 
CASE(HQ_second_Campaign_Coordinator__c, 
"005200000025lDq",1, 
"00520000001C8Sn",1, 
"005200000025lEo",1, 
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows the number of users from the HQ office at Mölndal involved as either Campaign Coordinator, HQ Campaign Coordinator or HQ (second) Campaign Coordinator</inlineHelpText>
    <label># of HQ Mölndal Coordinators involved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>HQ_second_Campaign_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>To be used for HQ if there are more than on from HQ working on the Campaign</description>
    <inlineHelpText>To be used for HQ if there are more than on from HQ working on the Campaign</inlineHelpText>
    <label>HQ (second) Campaign Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns3</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Hands_on_Demonstration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hands-on Demonstration</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Hands_on_Hours__c</fullName>
    <description>Used for reporting (CE-reporting). Shows the summarized value of session length (excluding session type "Social Event") for sessions that has either "Hands-on Demonstration"=TRUE OR Session Type (D) = "Hands-on Training" - populated via APEX</description>
    <inlineHelpText>Summarized number of hours of hands-on in the Campaign</inlineHelpText>
    <label>Hands-on Hours</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Hands_on_date_FR__c</fullName>
    <description>To be used for equipment booking</description>
    <inlineHelpText>To be used for equipment booking</inlineHelpText>
    <label>Hands on date (FR)</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Has_Sessions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is checked if the Campaign has Sessions</description>
    <inlineHelpText>This field is checked if the Campaign has Sessions</inlineHelpText>
    <label>Has Sessions</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Has_Venue_been_contacted__c</fullName>
    <description>Used on the North America Activity Request Form</description>
    <label>Responsible to contact Venue?</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>RMC</fullName>
        </value>
        <value>
          <fullName>Co-Sponsor</fullName>
        </value>
        <value>
          <fullName>DM</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Honorarium_Actual__c</fullName>
    <label>Honorarium (Actual)</label>
    <summarizedField>Cost_Revenue_Transaction__c.Amount__c</summarizedField>
    <summaryFilterItems>
      <field>Cost_Revenue_Transaction__c.Type__c</field>
      <operation>equals</operation>
      <value>Honorarium</value>
    </summaryFilterItems>
    <summaryForeignKey>Cost_Revenue_Transaction__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Honorarium_Budget__c</fullName>
    <label>Honorarium (Budget)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Honorarium_Cost_Notes__c</fullName>
    <description>Used on NA Activity Request Form</description>
    <label>Honorarium Cost Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Hotel_Accommodation_Actual__c</fullName>
    <label>Hotel &amp; Accommodation (Actual)</label>
    <summarizedField>Cost_Revenue_Transaction__c.Amount__c</summarizedField>
    <summaryFilterItems>
      <field>Cost_Revenue_Transaction__c.Type__c</field>
      <operation>equals</operation>
      <value>Hotel &amp; Accommodation</value>
    </summaryFilterItems>
    <summaryForeignKey>Cost_Revenue_Transaction__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Hotel_Accommodation__c</fullName>
    <label>Hotel &amp; Accommodation (Budget)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Hotel_Check_Out_Date__c</fullName>
    <label>Hotel Check Out Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Hotel_Check_in_Date__c</fullName>
    <label>Hotel Check In Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Hotel_Information__c</fullName>
    <label>Hotel Information</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Include_in_Dealer_Community__c</fullName>
    <label>Include in Dealer Community?</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Yes_No</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>Initial_Training_FR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Information for France</description>
    <label>Initial Training (FR)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Instructional_Hours__c</fullName>
    <description>Used for reporting (CE-reporting). Shows the summarized value of session length (excluding session type "Social Event" and cancelled events) - populated via APEX</description>
    <inlineHelpText>Used for reporting (CE-reporting). Shows the summarized value of session length (excluding session type "Social Event" and cancelled events) - populated via APEX</inlineHelpText>
    <label>Instructional Hours</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Internal_Comments_D__c</fullName>
    <label>Internal Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Internal_training__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Fill in this checkbox if this Session is Internal training. To be used for Global Trainers</description>
    <inlineHelpText>Fill in this checkbox if this Session is Internal training.</inlineHelpText>
    <label>Internal training</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>International_Speaker_involved__c</fullName>
    <description>This field roll-ups the international speaker field on the member. if this field is filled, it means that there is an international speaker involved. Used for sharing</description>
    <label>International Speaker involved</label>
    <summaryFilterItems>
      <field>CampaignMember.International_Speaker__c</field>
      <operation>equals</operation>
      <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>International_speaker_involved_sharing__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Help field for sharing of the international speaker involved roll-up summary field. As roll-up summary fields are not shareable this fields is a help field that takes the same value as on the summary field</description>
    <label>International speaker involved(sharing)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Invitation_Course_Flyer_Format__c</fullName>
    <label>Distribution Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Mailing: Self mailer</fullName>
        </value>
        <value>
          <fullName>Mailing: In 3rd Party Envelope</fullName>
        </value>
        <value>
          <fullName>Handout</fullName>
        </value>
        <value>
          <fullName>Email: PDF attachment</fullName>
        </value>
        <value>
          <fullName>Email: e-blast</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Invitation_Course_Flyer_Quantity__c</fullName>
    <label>Invitation/Course Flyer: Quantity</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Invitation_Course_Flyer_Required__c</fullName>
    <label>Invitation/Course Flyer Created By</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>DENTSPLY Implants</fullName>
        </value>
        <value>
          <fullName>Third Party</fullName>
        </value>
        <value>
          <fullName>None Required</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Invitation_Course_Flyer_Style__c</fullName>
    <label>Invitation/Course Flyer: Style</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>Invitation_Course_Flyer_Required__c</controllingField>
      <valueSetDefinition>
        <value>
          <fullName>DENTSPLY Implants</fullName>
        </value>
        <value>
          <fullName>Third Party/Co-sponsor</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>KITS_RESTO_DIRECT_FR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KITS RESTO DIRECT (FR)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>KITS_RESTO_INDIRECT_FR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KITS RESTO INDIRECT (FR)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Last_Approval_Change_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Last Approval Change Date</label>
    <type>DateTime</type>
  </fields>
  <fields>
    <fullName>Latex_Gloves_FR__c</fullName>
    <label>Latex Gloves (FR)</label>
    <type>TextArea</type>
  </fields>
  <fields>
    <fullName>Lecture_Abstract_D__c</fullName>
    <label>Lecture Abstract</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Lecture_Title__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A Lookup to the Lecture Library. The Lecture Name and Abstract of the Lecture will be added to the session if those values are not filled with information</description>
    <inlineHelpText>A Lookup to the Lecture Library. The Lecture Name and Abstract of the Lecture will be added to the session if those values are not filled with information</inlineHelpText>
    <label>Lecture Title</label>
    <referenceTo>Lecture__c</referenceTo>
    <relationshipLabel>Campaign Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Legacy_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>Local_Contact_Person__c</fullName>
    <label>Local Contact Person</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>MAX_TUITION_FOR_WORKFLOW__c</fullName>
    <formula>MAX(  Tuition_Clinician__c ,  Tuition_Laboratory__c,  Tuition_Staff__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MAX TUITION FOR WORKFLOW</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>MISE_EN_FORME_FR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be used for PREP in France</description>
    <label>MISE EN FORME (FR)</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Mail_Check_To__c</fullName>
    <description>Used on NA Activity Request Form</description>
    <label>Mail Check To:</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Mailing_Printing_Actual__c</fullName>
    <label>Mailing &amp; Printing (Actual)</label>
    <summarizedField>Cost_Revenue_Transaction__c.Amount__c</summarizedField>
    <summaryFilterItems>
      <field>Cost_Revenue_Transaction__c.Type__c</field>
      <operation>equals</operation>
      <value>Mailing &amp; Printing</value>
    </summaryFilterItems>
    <summaryForeignKey>Cost_Revenue_Transaction__c.Campaign__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>Mailing_Printing_Budget__c</fullName>
    <label>Mailing &amp; Printing (Budget)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
  </fields>
  <fields>
    <fullName>Mailing_list_provided_by__c</fullName>
    <label>Mailing list provided by:</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <valueSetDefinition>
        <value>
          <fullName>Co-sponsor</fullName>
        </value>
        <value>
          <fullName>Sales Rep</fullName>
        </value>
        <value>
          <fullName>List: Salesforce.com</fullName>
        </value>
        <value>
          <fullName>Purchase List</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Make_Check_Payable_to__c</fullName>
    <description>Used on NA Activity Request Form</description>
    <label>Make Check Payable to:</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>APAC</fullName>
        </value>
        <value>
          <fullName>AT</fullName>
        </value>
        <value>
          <fullName>AU</fullName>
        </value>
        <value>
          <fullName>BeNeLu</fullName>
        </value>
        <value>
          <fullName>CH</fullName>
        </value>
        <value>
          <fullName>DE</fullName>
        </value>
        <value>
          <fullName>DEX</fullName>
        </value>
        <value>
          <fullName>FR</fullName>
        </value>
        <value>
          <fullName>Global</fullName>
        </value>
        <value>
          <fullName>IB</fullName>
        </value>
        <value>
          <fullName>IT</fullName>
        </value>
        <value>
          <fullName>JP</fullName>
        </value>
        <value>
          <fullName>NA</fullName>
        </value>
        <value>
          <fullName>Nordic</fullName>
        </value>
        <value>
          <fullName>PL</fullName>
        </value>
        <value>
          <fullName>RU</fullName>
        </value>
        <value>
          <fullName>SE</fullName>
        </value>
        <value>
          <fullName>UK</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Marketing_End_Date__c</fullName>
    <description>This date is updated by Eloqua and sets the date for when the marketing team completed the promotions efforts for this specific Campaign.</description>
    <inlineHelpText>This is the date when the marketing team completed their promotions efforts for this specific Campaign.</inlineHelpText>
    <label>Marketing End Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Marketing_Start_Date__c</fullName>
    <description>This date is updated by Eloqua and sets the date for when the marketing team began the promotions efforts for this specific Campaign.</description>
    <inlineHelpText>This is the date when the marketing team began their promotions efforts for this specific Campaign.</inlineHelpText>
    <label>Marketing Start Date</label>
    <type>Date</type>
  </fields>
  <fields>
    <fullName>Maximum_of_Participants_Reached__c</fullName>
    <formula>of_Available_Event_Seats__c  &lt;= 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maximum # of Participants Reached?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Meal_End_Time__c</fullName>
    <label>Meal End Time</label>
    <length>9</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Meal_Start_Time__c</fullName>
    <label>Meal Start Time</label>
    <length>9</length>
    <type>Text</type>
  </fields>
</CustomObject>